- Added a new subprocess for the scrobbler.
- Fixed last.fm tag scanning.
- Fixed ReplayGain scanning.
- Fixed Debian and Ubuntu init scripts.
- Updated ezstream codec parameters.
- Fixed paths in example ezstream.xml.
- Added a small step-by-step install guide.
- Dumped ices in favor of ezstream.
- Added support for $MAIL in `ardj console'.
- Added colors to `ardj console'.

1.0.18

- Fixed the jabber bot crashing when no chat room jid is set.
- Fixed init scripts for ardj-jabber and ardj-server.
- Added post-install tasks to setup.py
- Added built-in playlists that work out-of-the-box
- Added support for setup.py --prefix


1.0.17

- Fixed logging in ardj-ices.
- Added missing man page
- Added MANIFEST.in to setup.py
- Added to the PYPI repository.
- Removed useless parts of Makefile.


1.0.12

 - Fixed connection spinning in contrib/hotline.
 - Fixed Unicode problems in ardj console (CLI).
 - Fixed the voters command in fresh install (Jabber).
 - Fixed a bug in the MySQL database driver.
 - Fixed missing tags when downloading from Jamendo.
 - Fixed missing schedule update (cron).
 - Fixed ISE handling in contrib/newswire url shortener.
 - Fixed the SQL command (jabber).
 - Fixed some error logging.
 - Fixed running from the source tree.
 - Fixed the database console.
 - Fixed lasting transactions in web UI.
 - Fixed prerolls.
 - Fixed sticky labels.
 - Fixed last.fm schedule updates.
 - Fixed broken last.fm links.
 - Fixed exception logging.
 - Fixed database locks by failed WebAPI handlers.
 - Added history for twitter-fetcher (contrib).
 - Added an option to disable voting (config).
 - Added automatic promotion of most active voters to admins.
 - Added support for sysvinit (Debian).
 - Added a default response for commands echo, sql and show-news-from-jamendo (Jabber).
 - Added better logging for the skip command (Jabber).
 - Added a handler to retrieve current track info (WebAPI).
 - Added authentication to certain web api calls.